refactor: Use the JDK's own ceiling division and clamping
divideCeil computed the ceiling as (value + divisor - 1) / divisor, which overflows once value and divisor
together pass Long.MAX_VALUE. Math.ceilDiv carries the same result inside that range and stays correct
beyond it. The divisor guard stays, because ceilDiv throws on zero where the old form returned the value.

The zoom and visible-row bounds each nested Math.min over Math.max. Math.clamp states the same bound in one
call, and both pairs are ordered constants, so it cannot hit the inverted range it would throw on.